k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-platform
  labels:
    name: payment-platform
